chore: Removed incompatible use of java.nio.charset.Charset instead of String